# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import professionsRouter from "./professions";
 import targetSchoolsRouter from "./target-schools";
 import prereqCoursesRouter from "./prereq-courses";
 import dashboardRouter from "./dashboard";
+import programSchoolsRouter from "./program-schools";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(professionsRouter);
 router.use(targetSchoolsRouter);
 router.use(prereqCoursesRouter);
 router.use(dashboardRouter);
+router.use(programSchoolsRouter);
 
 export default router;
